--- a/1.html
+++ b/1.html
@@ -3,7 +3,9 @@
 <head>
     <title>WEB1 - HTML</title>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href="./style.css">   
+    <link rel = "stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="color.js"></script> 
 </head>
 <body>
     <h1><a href = "index.html">WEB</a></h1>
@@ -14,6 +16,7 @@
             <li> <a href = "3.html">JavaScript</a></li>
         </ol>
         <div id = "article">
+            <input type="button" value="night" onclick=" nightDayHandler(this)">
             <h2>HTML</h2>
             웹 문서를 만들기 위하여 사용하는 기본적인 웹 언어의 한 종류이다. <strong><u>하이퍼텍스트</u>를 작성하기 위해 개발되었다.</strong>
             <p>
