--- a/2.html
+++ b/2.html
@@ -3,7 +3,9 @@
 <head>
     <title>WEB1 - CSS</title>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href="./style.css">   
+    <link rel = "stylesheet" href="style.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="color.js"></script>  
 </head>
 <body>
 <h1><a href = "index.html">WEB</a></h1>
@@ -14,6 +16,7 @@
             <li> <a href = "3.html">JavaScript</a></li>
         </ol>
         <div id = "article">
+            <input type="button" value="night" onclick=" nightDayHandler(this)">
             <h2>CSS</h2>
             <strong>웹 문서의 전반적인 스타일을 미리 저장해 둔 스타일시트이다. 문서 전체의 일관성을 유지할 수 있고, 세세한 스타일 지정의 필요를 줄어들게 하였다.</strong>
             <img src = "./img/CSS.jpg" width="100%">
