--- a/3.html
+++ b/3.html
@@ -3,7 +3,9 @@
 <head>
     <title>WEB1 - JavaScript</title>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href="./style.css"> 
+    <link rel = "stylesheet" href="style.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="color.js"></script>
 </head>
 <body>
 <h1><a href = "index.html">WEB</a></h1>
@@ -14,6 +16,7 @@
             <li> <a href = "3.html">JavaScript</a></li>
         </ol>
         <div id = "article">
+            <input type="button" value="night" onclick=" nightDayHandler(this)">
             <h2>JavaScript</h2>
             <strong>웹을 풍부하게 만들어주는 작고 가벼운 언어</strong>
             <img src = "./img/javascript.jpg" width="100%">
