--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
     <title>WEB1 - Welcome</title>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href="./style.css">    
+    <link rel = "stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="color.js"></script>
 </head>
 <body>   
 <h1><a href = "index.html">WEB</a></h1>
     <div id = "grid">    
         <ol>
-            <li> <a href = "1.html" >HTML</a></li>
-            <li> <a href = "2.html" >CSS</a></li>
-            <li> <a href = "3.html" >JavaScript</a></li>
+            <li> <a  href = "1.html">HTML</a></li>
+            <li> <a  href = "2.html">CSS</a></li>
+            <li> <a  href = "3.html">JavaScript</a></li>
         </ol>
         <div id = "article">
+            <input type="button" value="night" onclick=" nightDayHandler(this)">
             <h2>WEB</h2>
             <strong>웹서버에 정보를 저장해 놓은 집합체</strong>
             <img src = "./img/WEB.jpg" width="100%">
