--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>WEB1 - Welcome</title>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href="style.css">
+    <link rel = "stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="color.js"></script>
+    <script src="./color.js"></script>
 </head>
 <body>   
-<h1><a href = "index.html">WEB</a></h1>
+<h1><a href = "./index.html">WEB</a></h1>
     <div id = "grid">    
         <ol>
             <li> <a  href = "1.html">HTML</a></li>
